tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_errors@error_inside_body.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/components/error_inside_body.txt
---
error: Field `undefined_var` is not defined
 --> components:1:44
  |
1 | {% component greet(name: string) %}Hello {{ undefined_var }}!{% endcomponent greet %}
  |                                             ^^^^^^^^^^^^^

note: called from tpl:1:3
  |
1 | {{ <greet name="world"/> }}
  |    ^^^^^^^^^^^^^^^^^^^^^
